--- a/requirements.txt
+++ b/requirements.txt
@@ -66,6 +66,7 @@ pytz==2018.5
 pyzmq==17.1.2
 qtconsole==4.4.1
 requests==2.20.1
+scikit-learn==0.20.1
 scipy==1.1.0
 seaborn==0.9.0
 Send2Trash==1.5.0
